<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stardroid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_sky_view_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black">

    <FrameLayout
        android:id="@+id/main_sky_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <android.opengl.GLSurfaceView
            android:id="@+id/skyrenderer_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <!-- Provides a translucent mask over the whole screen -->
        <View
            android:id="@+id/view_mask"
            android:layout_width="fill_parent"
...
            <TextView
                android:id="@+id/search_status_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dip"
                android:layout_toEndOf="@id/search_icon"
                android:layout_toStartOf="@+id/cancel_search_button"
                android:paddingStart="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/search_prompt"
                android:layout_width="fill_parent"
...
                android:gravity="top"
                android:visibility="gone" />

        </LinearLayout>
        <!--  The layers/providers button -->
        <com.aadipanchang.map.views.ButtonLayerView
            android:id="@+id/layer_buttons_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/sidebarnoelements"
            android:orientation="vertical"
            stardroid:fade_time="500">
...
                        android:layout_gravity="right"
                        android:layout_marginBottom="6dp"
                        android:contentDescription="Toggle Language"
                        android:clickable="true" />

                    <com.aadipanchang.map.views.PreferencesButton
                        android:id="@+id/manual_auto_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:contentDescription="@string/preferences_auto_mode_title"
                        stardroid:default_value="true"
                        stardroid:image_off="@drawable/automaticmode"
...
